feat: dotenv-based secret loading for OpenAIAnalyzer